[package]
name = "kni-rs"
version = "0.1.0"
authors = ["Nathan Hare <me@laspruca.nz>"]
edition = "2018"
license = "MIT"
description = "A kamar notices interface for rust"
readme = "README.md"
homepage = "https://github.com/jacobtread/kni"
repository = "https://github.com/laspruca/kni-rs"
documentation = "https://docs.rs/kni-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.2", features = ["full"] }
hyper-tls = "0.5.0"
chrono = "0.4.19"
serde-xml-rs = "0.4.1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies.tokio]
version = "1.0.2"
features = ["full"]